--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cppassignment2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(cppassignment2 main.cpp city.cpp city.hpp tour.cpp tour.hpp)
+add_executable(cppassignment2 main.cpp City.cpp City.hpp Tour.cpp Tour.hpp)
